test/valid/58248_precedence/precedene.mag
-- Author: 58248, Afonso Topa 

fun main(_) : Unit -> Unit =
   var x : Int = 2^-3^2*5;
   print(x)
