test/invalid-syntax/57163_function_call_too_many_types/function_with_too_many_types.mag
-- Author: 57163, Guilherme Dias

fun f() : (Int, Int)-> Int =
	2

